# molgenis-flwr-armadillo

./: .dockerignore  .gitignore  404.html  IMPLEMENTATION_PLAN.md  README.md  SECURE_DATA_ACCESS_PLAN.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
docker/: build-push-all.sh  build-verified-images.sh  verified-superlink.Dockerfile  verified-supernode.Dockerfile
docs/: getting-started.md  index.md
docs/vignettes/: loading-data.md  token-routing.md
examples/docker/: README.md  docker-compose.yml  start_all_with_logs.sh  start_super_link.sh  start_two_local_super_nodes.sh  stop_all.sh  superexec.Dockerfile
examples/pytorch-armadillo/: pyproject.toml
examples/pytorch-armadillo/flower_tutorial/: client_app.py  server_app.py
examples/quickstart-pytorch/: flower-nodes.yaml  pyproject.toml  superexec.Dockerfile
examples/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py
getting-started/: index.html
search/: search_index.json
src/molgenis_flwr_armadillo/: __init__.py  authenticate.py  discovery.py  helpers.py  keygen.py  resources.py  run.py  sign_cli.py  signing.py  strategy.py  supernode_verify.py
tests/: __init__.py  test_authenticate.py  test_discovery.py  test_helpers.py  test_import.py  test_run.py  test_signing.py  test_strategy.py
vignettes/loading-data/: index.html
vignettes/token-routing/: index.html
